# seplogic-demo

./: .gitignore  LICENSE  Makefile  README.md  _CoqProject  seplogic-demo.opam
.github/workflows/: build.yml
src/: binary_search.v  delete_tree.v  extensions.v  simplified_iris.v  warmup.v
